# xdust

./: .buildinfo  .gitignore  README.md  composition.html  genindex.html  graindist.html  grainpop.html  halos.html  index.html  minerals.html  pyproject.toml  scatmodels.html  search.html  searchindex.js  setup.py  shape.html  sizedist.html
.doctrees/: composition.doctree  environment.pickle  graindist.doctree  grainpop.doctree  halos.doctree  index.doctree  scatmodels.doctree  shape.doctree  sizedist.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/xdust/: grainpop.html  scatteringmodel.html
_modules/xdust/graindist/: composition.html  graindist.html  shape.html  sizedist.html
_modules/xdust/halos/: galhalo.html  halo.html
_modules/xdust/scatteringmodel/: ggadt.html  miescat.html  pah.html  rgscat.html
_sources/: extinction.rst.txt  index.rst.txt
docs/: composition.rst  conf.py  graindist.rst  halos.rst  index.rst  scatmodels.rst  shape.rst  sizedist.rst
docs/_build/html/: composition.html  extinction.html  genindex.html  graindist.html  grainpop.html  halos.html  index.html  objects.inv  scatmodels.html  search.html  searchindex.js  shape.html  sizedist.html
newdust/graindist/: graindist.py
newdust/graindist/sizedist/: weingartner.py
newdust/halos/: galhalo.py
src/xdust/: grainpop.py
src/xdust/graindist/: graindist.py
src/xdust/halos/: halo.py  (+1 more)
tests/: __init__.py  test_cmindex.py  test_galhalo.py  test_ggadt_file.py  test_graindist.py  test_grainpop.py  test_inits.py  test_scatmodels.py  test_shape.py  test_sizedist.py
(+61 files in other folders)
