[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xdust"
version = "0.1"
description = "Library of dust scattering codes"
authors = [
    { name = "Lia Corrales", email = "liac@umich.edu" }
]
readme = "README.md"
license = { text = "BSD 2-clause" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "astropy",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
docs = [
    "sphinx>=7.0",
    "shibuya",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild"
]

[project.urls]
Homepage = "https://github.com/eblur/xdust"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xdust = [
    "graindist/tables/*",
    "scatteringmodel/tables/*",
]
